--- a/Digi_Catalogue/Info.plist
+++ b/Digi_Catalogue/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.edukul.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.storaenso</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
